--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
         <!-- Bagian shortcut ke situs web -->
         <div class="content-top">
-            <h1 class="tp"><span id="text">ゼータ恐らく安房</span> </h1>
+            <h1 class="tp"><span id="text">ゼータは阿波が好き</span> </h1>
         </div>
         <div class="content">
             <h3> </h3>
